// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider Basic render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c1 {
  border-color: hsla(0,0%,45%,1);
  margin: 0px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-width: 0px 0px thin;
  border-style: solid;
}

.c0 {
  display: block;
  margin: 0;
  font-size: 1rem;
  color: hsla(217,33%,17%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
}

<body>
    <div>
      <p
        class="c0"
        role="contentinfo"
      >
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ratione, id vero quibusdam aperiam officia veritatis recusandae magni accusamus rem quo cupiditate architecto hic culpa eum totam reprehenderit, libero veniam!
      </p>
      <hr
        class="c1"
        role="separator"
      />
      <p
        class="c0"
        role="contentinfo"
      >
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ratione, id vero quibusdam aperiam officia veritatis recusandae magni accusamus rem quo cupiditate architecto hic culpa eum totam reprehenderit, libero veniam!
      </p>
    </div>
  </body>,
  "container": .c1 {
  border-color: hsla(0,0%,45%,1);
  margin: 0px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-width: 0px 0px thin;
  border-style: solid;
}

.c0 {
  display: block;
  margin: 0;
  font-size: 1rem;
  color: hsla(217,33%,17%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
}

<div>
    <p
      class="c0"
      role="contentinfo"
    >
      Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ratione, id vero quibusdam aperiam officia veritatis recusandae magni accusamus rem quo cupiditate architecto hic culpa eum totam reprehenderit, libero veniam!
    </p>
    <hr
      class="c1"
      role="separator"
    />
    <p
      class="c0"
      role="contentinfo"
    >
      Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ratione, id vero quibusdam aperiam officia veritatis recusandae magni accusamus rem quo cupiditate architecto hic culpa eum totam reprehenderit, libero veniam!
    </p>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Divider Dark mode basic render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c1 {
  border-color: hsla(0,0%,45%,1);
  margin: 0px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-width: 0px 0px thin;
  border-style: solid;
}

.c0 {
  display: block;
  margin: 0;
  font-size: 1rem;
  color: hsla(210,40%,96%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
}

<body>
    <div>
      <p
        class="c0"
        role="contentinfo"
      >
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ratione, id vero quibusdam aperiam officia veritatis recusandae magni accusamus rem quo cupiditate architecto hic culpa eum totam reprehenderit, libero veniam!
      </p>
      <hr
        class="c1"
        role="separator"
      />
      <p
        class="c0"
        role="contentinfo"
      >
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ratione, id vero quibusdam aperiam officia veritatis recusandae magni accusamus rem quo cupiditate architecto hic culpa eum totam reprehenderit, libero veniam!
      </p>
    </div>
  </body>,
  "container": .c1 {
  border-color: hsla(0,0%,45%,1);
  margin: 0px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-width: 0px 0px thin;
  border-style: solid;
}

.c0 {
  display: block;
  margin: 0;
  font-size: 1rem;
  color: hsla(210,40%,96%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
}

<div>
    <p
      class="c0"
      role="contentinfo"
    >
      Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ratione, id vero quibusdam aperiam officia veritatis recusandae magni accusamus rem quo cupiditate architecto hic culpa eum totam reprehenderit, libero veniam!
    </p>
    <hr
      class="c1"
      role="separator"
    />
    <p
      class="c0"
      role="contentinfo"
    >
      Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima ratione, id vero quibusdam aperiam officia veritatis recusandae magni accusamus rem quo cupiditate architecto hic culpa eum totam reprehenderit, libero veniam!
    </p>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Divider Other variants 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c1 {
  border-color: hsla(271,91%,65%,1);
  margin: 0px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-width: 0px 0px thin;
  border-style: solid;
}

.c2 {
  border-color: hsla(0,0%,45%,1);
  margin: 0px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-width: 0px 0px thick;
  border-style: solid;
}

.c3 {
  border-color: hsla(0,0%,15%,1);
  margin: 0px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-width: 0px 0px thin;
  border-style: solid;
}

.c4 {
  border-color: hsla(0,0%,45%,1);
  margin: 0px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-width: 0px 0px thin;
  border-style: dashed;
}

.c0 {
  display: block;
  margin: 0;
  font-size: 1rem;
  color: hsla(210,40%,96%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
}

<body>
    <div>
      <p
        class="c0"
        role="contentinfo"
      >
        color major
      </p>
      <hr
        class="c1"
        role="separator"
      />
      <p
        class="c0"
        role="contentinfo"
      >
        thick density
      </p>
      <hr
        class="c2"
        role="separator"
      />
      <p
        class="c0"
        role="contentinfo"
      >
        800 shade
      </p>
      <hr
        class="c3"
        role="separator"
      />
      <p
        class="c0"
        role="contentinfo"
      >
        dashed style
      </p>
      <hr
        class="c4"
        role="separator"
      />
    </div>
  </body>,
  "container": .c1 {
  border-color: hsla(271,91%,65%,1);
  margin: 0px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-width: 0px 0px thin;
  border-style: solid;
}

.c2 {
  border-color: hsla(0,0%,45%,1);
  margin: 0px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-width: 0px 0px thick;
  border-style: solid;
}

.c3 {
  border-color: hsla(0,0%,15%,1);
  margin: 0px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-width: 0px 0px thin;
  border-style: solid;
}

.c4 {
  border-color: hsla(0,0%,45%,1);
  margin: 0px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-width: 0px 0px thin;
  border-style: dashed;
}

.c0 {
  display: block;
  margin: 0;
  font-size: 1rem;
  color: hsla(210,40%,96%,1);
  font-weight: 400;
  -webkit-letter-spacing: 0.00938em;
  -moz-letter-spacing: 0.00938em;
  -ms-letter-spacing: 0.00938em;
  letter-spacing: 0.00938em;
  line-height: 1.5;
}

<div>
    <p
      class="c0"
      role="contentinfo"
    >
      color major
    </p>
    <hr
      class="c1"
      role="separator"
    />
    <p
      class="c0"
      role="contentinfo"
    >
      thick density
    </p>
    <hr
      class="c2"
      role="separator"
    />
    <p
      class="c0"
      role="contentinfo"
    >
      800 shade
    </p>
    <hr
      class="c3"
      role="separator"
    />
    <p
      class="c0"
      role="contentinfo"
    >
      dashed style
    </p>
    <hr
      class="c4"
      role="separator"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
